policies/require-non-root/.test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: require-non-root
policies:
  - ../policy.yaml
resources:
  - resources.yaml
results:
  - policy: require-non-root
    rule: require-run-as-non-root
    kind: Pod
    resources:
      - good-pod-nonroot
    result: pass
  - policy: require-non-root
    rule: require-run-as-non-root
    kind: Pod
    resources:
      - bad-pod-root
    result: fail
